# Yuan_Ye_Study_Agent

./: .gitattributes  .gitignore  AGENT.md  DEVELOPMENT_REFERENCE.md  LICENSE  README.md  config.ini.example  pyproject.toml  run.py
.github/workflows/: tests.yml
.yy/: hooks.example.json  settings.json  settings.schema.json
.yy/agents/: reviewer.md
Agent/: README.md  __init__.py  agent.py  agents.py  config.py  contracts.py  errors.py  hook.py  hooks.py  integrations.py  legacy.py  permissions.py  react_agent.py  retry.py  runtime.py  sandbox.py  scheduler.py  storage.py  subagents.py  teams.py  tool_registry.py  types.py
Agent/extensions/: __init__.py  hooks.py
Agent/models/: __init__.py  errors.py  providers.py
Agent/react/: __init__.py  loop.py
Agent/runtime/: __init__.py  engine.py  failure.py  subagent.py
bootstrap/: __init__.py  initializer.py
bootstrap/templates/: settings.local.json.example
context_process/: __init__.py  callbacks.py  compression.py
harness-evolution/: harness.py
memory/: __init__.py  callbacks.py  models.py  profile.py  session.py  store.py
model_choice/: README.md  __init__.py  client.py  config.py  example.py  exceptions.py  models.py  provider.py  settings.py
prompt/: __init__.py  composer.py  compression.py  subagent.py
run_ui/: README.md  __init__.py  __main__.py  approval.py  cli.py  console.py  harness_loader.py  web.py
run_ui/static/: app.css  app.js
run_ui/templates/: index.html
skills/: __init__.py  registry.py
tests/: __init__.py  test_core.py  test_harness.py  test_integration_security.py  test_resilience.py  test_runtime_hook_security.py  test_scheduler_security.py  test_skill_registry_security.py  test_subagent_security.py  test_ui.py
tests/error/: README.md
tools/: __init__.py  base.py  calculator.py  contracts.py  core.py  current_time.py  defaults.py  extensions.py  harness.py  path_guard.py  read_file.py  registry.py  search_workspace.py  subagent.py  write_file.py
