[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yy-agent"
version = "1.0.0"
description = "Local-first asynchronous study agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110,<1", "httpx>=0.27,<1", "pydantic>=2.8,<3", "rich>=13.7,<15", "typer>=0.12,<1", "uvicorn>=0.29,<1"]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
yy-agent = "run_ui.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["Agent*", "bootstrap*", "context_process*", "memory*", "prompt*", "tools*", "run_ui*"]

[tool.setuptools.package-data]
bootstrap = ["templates/*.example"]
run_ui = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.setuptools.data-files]
"harness-evolution" = ["harness-evolution/harness.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
